Fix theme toggle button alignment.

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -17,6 +17,19 @@ header .navbar .navbar-nav a {
 #theme-toggle {
     background-color: var(--background-color) !important;
     color: var(--text-color) !important;
+    border: none;
+    padding: 0.5rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar-nav .nav-item .text-center {
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .navbar-toggler {
